# bevy-rune

./: Cargo.toml
assets/: foo.rune
src/: dynamic_stuff.rn  help.rs  load_dynamic.rune  magic.rs  main.rs  my_component.rn  query.rune  rune_asset_loader.rs  rune_systems.rs  test.rune
