[package]
name = "bevy-rune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rune = {  path = "../../rune/crates/rune" }
bevy = { git = "https://github.com/james-j-obrien/bevy", branch = "dynamic-term-builder"}